--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-selection-manager",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Manage selection of arbitrary elements with range (shift) and toggle (control) selection support.",
   "main": "lib/index.cjs",
   "module": "lib/index.esm.js",
+  "types": "lib/src/index.d.ts",
   "license": "MIT",
   "repository": "https://github.com/JavierM42/react-selection-manager",
   "scripts": {
